--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=moonhouse-fb879.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=995336070306
 EXPO_PUBLIC_FIREBASE_APP_ID=1:995336070306:web:d2a6f092bf50576be1e3fb
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-4JRFNKJR06
+
+
+EXPO_PUBLIC_GOOGLE_CLIENT_ID=995336070306-2b3u9um7bepnpjd9om98bmr2iak2cdkt.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID=995336070306-3jdcjqnj469ggao1b0ifh2h81bn9dma0.apps.googleusercontent.com
